@@ -5,6 +5,8 @@ import Common.Network.Request;
 import Common.Network.Response;
 import Server.Manager.CommandManager;
 
+import java.util.stream.Collectors;
+
 /**
  * Command to show the syntax of full commands
  */
@@ -20,12 +22,12 @@ public class HelpCommand extends Commands {
     public Response execute (Request request){
         try {
             if (request.getArgumentCommand() != null) throw new CommandSyntaxIsWrongException();
-            StringBuilder message = new StringBuilder();
-            for ( Commands c : commandManager.getCommands() ){
-                if (c.getName().equals("NoSuchCommand")) continue;
-                message.append(" %-35s%-1s%n".formatted(c.getName(), c.getDescription()));
-            }
-            return new Response(message.toString());
+
+            String message = commandManager.getCommands().stream().
+                    filter(command -> !command.getName().equals("NoSuchCommand"))
+                    .map(command -> String.format(" %-35s%-1s%n", command.getName(), command.getDescription() ))
+                    .collect(Collectors.joining());
+            return new Response(message);
         } catch (CommandSyntaxIsWrongException e) {
             return new Response("Syntax command is not correct. Usage: \"" + getName() + "\"");
         }
